--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,9 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <!-- Base application theme. -->
-    <style name="REDAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <!-- RED application theme. -->
+    <style name="REDAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">s
         <item name="colorPrimary">@color/altColorPrimary</item>
         <item name="colorPrimaryDark">@color/altColorPrimaryDark</item>
         <item name="colorAccent">@color/altColorAccent</item>
