--- a/app/src/main/res/layout/activity_social_feeder.xml
+++ b/app/src/main/res/layout/activity_social_feeder.xml
@@ -8,7 +8,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TabLayout
@@ -32,7 +32,7 @@
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Other" />
+                android:text="@string/Other" />
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
