Created Main Menu Bar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
             style="@style/REDAppTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Points"
+            android:text="Points"
             android:theme="@style/REDAppTheme" />
 
         <android.support.design.widget.TabItem
