--- a/app/src/main/res/layout/activity_social_feeder.xml
+++ b/app/src/main/res/layout/activity_social_feeder.xml
@@ -32,7 +32,7 @@
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Other" />
+                android:text="Other" />
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
