--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,9 +132,8 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="47dp"
             android:background="?attr/colorPrimary"
-            android:clickable="false"
             android:elevation="6dp"
             android:weightSum="1"
             app:contentInsetLeft="@dimen/fab_margin">
