modified creation of the list of items in the store

--- a/app/src/main/res/layout/store_tab_fragment.xml
+++ b/app/src/main/res/layout/store_tab_fragment.xml
@@ -4,7 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<!--
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:dividerHeight="5dp"
+        android:visibility="visible"
+        android:layout_marginTop="47dp">
+    </ListView>
+
+    <!--
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
