--- a/app/src/main/res/layout/sample_item_list1.xml
+++ b/app/src/main/res/layout/sample_item_list1.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:layout_marginTop="47dp">
+
     <TextView
         android:id="@+id/name_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28dip" />
-    <TextView
+        android:textSize="28sp" />
+   <!-- <TextView
         android:id="@+id/number_entry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28dip" />
+        android:textSize="28sp" />
+        -->
 </LinearLayout>
