added facebook login to facebook fragment

--- a/app/src/main/res/layout/facebook_tab_fragment.xml
+++ b/app/src/main/res/layout/facebook_tab_fragment.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Facebook"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
