worked on making a list for the store

--- a/app/src/main/res/layout/sample_item_list1.xml
+++ b/app/src/main/res/layout/sample_item_list1.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="47dp">
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
     <TextView
-        android:id="@+id/name_entry"
+        android:id="@+id/ItemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28sp" />
-   <!-- <TextView
-        android:id="@+id/number_entry"
+        android:text="Name" />
+    <TextView
+        android:id="@+id/ItemDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28sp" />
-        -->
+        android:text="Description" />
 </LinearLayout>
