--- a/app/src/main/res/layout/store_tab_fragment.xml
+++ b/app/src/main/res/layout/store_tab_fragment.xml
@@ -1,31 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/store_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/StoreItemlist"
-        android:layout_width="wrap_content"
+    <ViewStub
+        android:id="@+id/stub_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="47dp"
-        android:layout_marginTop="47dp"
-        android:background="?attr/colorControlHighlight"
-        android:divider="@android:color/black"
-        android:dividerHeight="5dp"
-        android:scrollbars="vertical"
-        android:smoothScrollbar="true"
-        android:visibility="visible"></ListView>
+        android:layout_marginTop="0dp"
+        android:inflatedId="@+id/showlayout"
+        android:layout="@layout/store_listview"/>
 
-    <!--
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <ViewStub
+        android:id="@+id/stub_grid"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="StoreTab"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
-    -->
-
-</RelativeLayout>
+        android:layout_marginTop="10dp"
+        android:inflatedId="@+id/showlayout"
+        android:layout="@layout/store_gridview"/>
+</LinearLayout>
