--- a/app/src/main/res/layout/store_listview.xml
+++ b/app/src/main/res/layout/store_listview.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     android:background="#d1d1d1">
 
-    <ListView
+    <ListView android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/mylistview"
         android:cacheColorHint="#00000000"
         android:paddingTop="10dp"
         android:dividerHeight="10dp"
