--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,11 @@
                     android:layout_height="wrap_content"
                     android:text="@string/action_create_new_account" />
 
+                <TextView
+                    android:id="@+id/TVstatusView"
+                    android:layout_width="match_parent"
+                    android:layout_height="34dp" />
+
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
