--- a/app/src/main/res/layout/store_single_item_view.xml
+++ b/app/src/main/res/layout/store_single_item_view.xml
@@ -90,7 +90,8 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/button3" />
+            app:layout_constraintRight_toLeftOf="@+id/button3"
+            android:onClick="onClick"/>
 
         <Button
             android:id="@+id/button3"
