--- a/app/src/main/res/layout/store_single_item_view.xml
+++ b/app/src/main/res/layout/store_single_item_view.xml
@@ -19,14 +19,18 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
             android:layout_margin="32dp"
-            app:srcCompat="@drawable/red2"
-            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:srcCompat="@drawable/red2" />
 
         <TextView
             android:id="@+id/txtTitle"
@@ -38,8 +42,9 @@
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.501" />
 
         <TextView
             android:id="@+id/txtDescription"
@@ -90,21 +95,11 @@
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/button3"
-            android:onClick="onClick"/>
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:text="Cancel"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginRight="16dp"
+            android:onClick="onClick"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/Button_Redeem" />
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 </RelativeLayout>
