--- a/app/src/main/res/layout/store_list_item.xml
+++ b/app/src/main/res/layout/store_list_item.xml
@@ -13,8 +13,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:srcCompat="@drawable/blacklogo_wide" />
+        android:layout_height="80dp" />
+        <!--app:srcCompat="@drawable/blacklogo_wide"-->
 
     <TextView
         android:id="@+id/txtTitle"
