--- a/app/src/main/res/layout/twitter_tab_fragment.xml
+++ b/app/src/main/res/layout/twitter_tab_fragment.xml
@@ -17,8 +17,16 @@
         android:id="@+id/tweet_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/twitter_login_button"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="56dp" />
+
+    <Button
+        android:id="@+id/earn_points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/earn_points" />
 
 </RelativeLayout>
