--- a/app/src/main/res/layout/twitter_tab_fragment.xml
+++ b/app/src/main/res/layout/twitter_tab_fragment.xml
@@ -5,28 +5,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.twitter.sdk.android.core.identity.TwitterLoginButton
-        android:id="@+id/twitter_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
     <ListView
         android:id="@+id/tweet_list_view"
-        android:layout_width="match_parent"
+        android:layout_width="210dp"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="56dp" />
+        android:layout_alignParentTop="true" />
 
-    <Button
-        android:id="@+id/earn_points"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ListView
+        android:layout_width="116dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/earn_points" />
+        android:layout_toRightOf="@+id/tweet_list_view" />
+
+    <com.twitter.sdk.android.core.identity.TwitterLoginButton
+        android:id="@+id/twitter_login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
