--- a/app/src/main/res/layout/custom_tweet_layout.xml
+++ b/app/src/main/res/layout/custom_tweet_layout.xml
@@ -14,7 +14,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/delete_btn"
+        android:id="@+id/retweet_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
