--- a/app/src/main/res/layout/point_tab_fragment.xml
+++ b/app/src/main/res/layout/point_tab_fragment.xml
@@ -12,14 +12,14 @@
 
         <TextView
             android:id="@+id/tvUserName"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="100dp"
             android:text="@string/lblUserName"
-            android:textSize="30sp"
+            android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
